# rag-service

./: .env.example  .gitignore  pyproject.toml
.cursor/rules/: async_pattern.mdc  deployment_strategy.mdc  development_principles.mdc  mcp_context7_usage.mdc  project_structure.mdc  tech_stack.mdc
app/: main.py
app/api/: documents.py  query.py
app/core/: celery_worker.py  config.py  tasks.py
app/schemas/: document.py  query.py  task.py
docs/: Architecture.md  DataProcessing.md  Development.md  README.md
docs/apis/: README.md  documents.md  rag.md  templates.md
docs/ops/: Deployment.md  Monitoring.md  Testing.md
